# pytextools

./: README.md  pyproject.toml  requirements.txt  setup.py
pytextools/: __init__.py
