[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pytextools"
version = "0.1.0"
description = "Toolbox to help write tex files with figures and tables produce by python scripts."
readme = { text = """pytextools
----------------

Toolbox to help write tex files with figures and tables produce by python scripts.
""", content-type = "text/markdown" }
authors = [{ name = "Thomas Ingeman-Nielsen", email = "tin@byg.dtu.dk" }]
urls = { "Homepage" = "https://example.com/" }
keywords = ["LaTeX", "toolbox"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]
license = { text = "GNU General Public License (GPL)" }

dependencies = ["pandas", "numpy>=1.24"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pytextools*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.FOR", "*.for", "*.pyf", "*.pyd", "*.par"]
